Fixed the placement of the logo on Mobile

--- a/Front/src/components/Biudzeto-ispl/EndResult/EndResultBP9.css
+++ b/Front/src/components/Biudzeto-ispl/EndResult/EndResultBP9.css
@@ -147,10 +147,6 @@ body {
         right: 0px;
     }
 
-    .navbar-brand {
-        margin: 0 !important;
-        padding: 0;
-    }
     .Nav-greeting {
         margin-top: 2px;
         padding: 2px 0 0 0 !important;
