--- a/Front/src/components/Islaidu-ispl/Islaidu-ispl/Islaidu-ispl-grid.css
+++ b/Front/src/components/Islaidu-ispl/Islaidu-ispl/Islaidu-ispl-grid.css
@@ -135,7 +135,7 @@ body {
     }
 
     .navbar-brand {
-        margin: 0 !important;
+        margin-left: 15px !important;
         padding: 0;
     }
     .Nav-greeting {
